<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Atraci</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Find Song/Artist/Album...</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="menuitem_refresh">Refresh</string>
    <string name="lyrics">Fetching lyrics!</string>
    <string name="genres">Genres</string>
    <string name="drawer_open">Atraci</string>
    <string name="drawer_close">Closed</string>
    <string name="quality_injection">player.getAvailableQualityLevels(player.getAvailableQualityLevels().length - 1)</string>

    <string-array name="navigation_items">
<!--         <item>Home</item> -->
        <item>Top 100 Chart</item>
        <item>My Playlists</item>
        <item>History</item>
        <item>Now Playing</item>
        <item>Donate</item>
        <item>Settings</item>
    </string-array>
        <string-array name="quality_names">
        <item>Low</item>
        <item>Medium</item>
        <item>Best</item>
    </string-array>
    <string-array name="quality_values">
        <item>small</item>
        <item>large</item>
        <item>@string/quality_injection</item>
    </string-array>

    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="backarrow">&lt;&lt;</string>
    <string name="forwardarrow">&gt;&gt;</string>
    <string name="title_activity_playlist_selector">PlaylistSelectorActivity</string>
    <string name="playlists">My Playlists</string>
    <string name="top100">Top 100 Chart</string>
    <string name="add_playlist">Add Playlist</string>
    <string name="playlist_hint">Enter playlist name</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat">Repeat</string>
    <string name="playlist_exists">"That playlist already exists! Please choose a different name!"</string>
    <string name="no_playlists_found">No playlists found!</string>
    <string name="no_songs">There are no songs to show!</string>
    <string name="add_to_playlist">Add to Playlist:</string>
    <string name="exists_in_playlist">The selected song is already </string>
    <string name="unexpected_error">An unexpected error has occurred!</string>
    <string name="song_delete_successful">Song deleted successfully!</string>
    <string name="song_added_to">Song added to </string>
    <string name="playlist">Playlist</string>
    <string name="has_been_deleted">has been deleted!</string>
    <string name="loading">Loading</string>
    <string name="update_feed">Update Feed</string>
    <string name="pk_quality">use_low_quality</string>
    <string name="use_low_quality">Load videos with lower quality</string>
    <string name="quality_desc">Reduce network usage by streaming lower quality videos.</string>
    <string name="clear_history">Clear All History</string>
    <string name="clear_history_desc">Deletes all songs that you have listened to.</string>
    <string name="history_cleared">Song history cleared!</string>
    <string name="add">Add</string>
    <string name="search">Search</string>

</resources>
